--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Strona wizytowka</title>
 </head>
 
-<body class="body">
+<body class="body js-body">
     <nav class="navigation">
         <ul class="navigation__list">
             <li class="navigation__iteam">
@@ -42,9 +42,9 @@
         </ul>
     </nav>
     </header>
-    <h1 class="h1">Korneliusz Rduch</h1>
+    <h1 class="h1 js-header">Korneliusz Rduch</h1>
     <header>
-        <button class="button">Usuń imię i nazwisko</button>
+        <button class="button js-button">Usuń imię i nazwisko</button>
         <section class="section">
 
             <img width="100" height="100"
@@ -110,9 +110,10 @@
                     kontakt telefoniczny pod numerem tel: 503311790.
                 </i>
             </p>
-            <button class="footer__button">Włącz
-                <span class="footer__span">ciemny</span> motyw
+            <button class="footer__button js-changeBackgroundButton">Włącz
+                <span class="footer__span js-nextColorname"></span> motyw 
             </button>
+            
         </footer>
 </body>
 
