--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="section">
 
             <img width="100" height="100"
-                src="images/korneliuszrduch.png"
+                src="/images/korneliuszrduch.png"
                 alt="korneliusz Rduch">
 
         </section>
