--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         <section class="section">
 
             <img width="100" height="100"
-                src="/images/korneliuszrduch.png"
+                src="./images/korneliuszrduch.png"
                 alt="korneliusz Rduch">
+                
 
         </section>
         <h3 class="h3"><i>O mnie:</i></h3>
